--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,78 @@
 * {
+    color: white;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+
+.hero h1 {
+    font-size: 42px;
+    margin-bottom: 10px;
+}
+
+
+.hero p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+
+.btn {
+    padding: 12px 25px;
+    background: #0077cc;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+
+.btn:hover {
+    background: #005fa3;
+}
+
+
+.services {
+    padding: 60px 40px;
+    text-align: center;
+}
+
+
+.services h2 {
+    margin-bottom: 30px;
+    font-size: 30px;
+}
+
+
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+
+.card {
+    background: white;
+    width: 260px;
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+
+.card h3 {
+    margin-bottom: 10px;
+    color: #0077cc;
+}
+
+
+.footer {
+    margin-top: 40px;
+    padding: 20px;
+    text-align: center;
+    background: #fff;
 }
