--- a/css/home.css
+++ b/css/home.css
@@ -1,78 +1,117 @@
 * {
-    color: white;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-.hero h1 {
-    font-size: 42px;
-    margin-bottom: 10px;
-}
-
-
-.hero p {
-    font-size: 18px;
-    margin-bottom: 20px;
-}
-
-
-.btn {
-    padding: 12px 25px;
-    background: #0077cc;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: .3s;
-}
-
-
-.btn:hover {
-    background: #005fa3;
-}
-
-
-.services {
-    padding: 60px 40px;
-    text-align: center;
-}
-
-
-.services h2 {
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 30px;
-    font-size: 30px;
 }
 
-
-.cards {
+/* TOP BAR MODERNA */
+.top-bar {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    gap: 25px;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px;
+    background: #ffffffcc;
+    backdrop-filter: blur(6px);
+    border-bottom: 1px solid #ddd;
+    position: sticky;
+    top: 0;
 }
 
 
-.card {
-    background: white;
-    width: 260px;
-    padding: 25px;
-    border-radius: 15px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-
-.card h3 {
-    margin-bottom: 10px;
+.logo {
+    font-size: 28px;
+    font-weight: bold;
     color: #0077cc;
 }
 
 
-.footer {
-    margin-top: 40px;
-    padding: 20px;
-    text-align: center;
+.nav-links {
+    display: flex;
+    gap: 25px;
+}
+
+
+.nav-links a {
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    font-weight: 600;
+    transition: 0.3s;
+}
+
+
+.nav-links a:hover {
+    color: #051F29 ;
+}
+
+
+.search-box {
+    display: flex;
+    border: 2px solid #0077cc;
+    border-radius: 20px;
+    overflow: hidden;
     background: #fff;
+}
+
+
+.search-box input {
+    padding: 8px 12px;
+    border: none;
+    outline: none;
+    width: 200px;
+}
+
+
+.search-box button {
+    padding: 8px 12px;
+    border: none;
+    cursor: pointer;
+    background: #0077cc;
+    color: white;
+    font-weight: bold;
+}
+
+
+/* CARROSSEL */
+.carousel {
+    width: 100%;
+    height: 200px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    margin: 40px auto;
+    max-width: 800px;
+    background: white;
+}
+
+
+.arrow {
+    background: none;
+    border: none;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+
+.big-btn {
+    width: 300px;
+    padding: 15px;
+    border-radius: 25px;
+    border: 2px solid #0077cc;
+    background: #0077cc;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    transition: 0.3s;
+}
+
+
+.big-btn:hover {
+    background: #005fa3;
 }
