--- a/css/index.css
+++ b/css/index.css
@@ -24,15 +24,19 @@ body {
 
 
 .login-box {
+    display: flex;
     background: white;
     padding: 30px;
-    width: 320px;
+    width: 400px;
     border-radius: 20px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     gap: 15px;
     text-align: center;
+    height: 400px;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -49,6 +53,8 @@ body {
     font-size: 15px;
     outline: none;
     transition: 0.2s;
+    height: 60px;
+    width: 300px;
 }
 
 
@@ -71,4 +77,15 @@ body {
 
 .login-box button:hover {
     background: #005FCC;
+}
+
+.entrar{
+  display: flex;
+  background-color: #007AFF;
+  height: 50px;
+  width: 200px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  
 }
